# mantel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mantel/: __init__.py  app.py  cli.py  config.py  desktop.py  mcp_host.py
src/mantel/mcp_servers/: __init__.py  image.py  rag.py  web.py
src/mantel/webui/: index.html
tests/: _mcp_test_server.py  test_agent.py  test_app.py  test_cli.py  test_mcp.py  test_mcp_servers.py
