[project]
name = "mantel"
version = "0.2.0"
description = "A universal, MCP-native desktop chat client — defaults to a local hearth engine, talks to any OpenAI-compatible or cloud backend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "yumima" }]
keywords = ["mcp", "chat", "llm", "ai", "desktop", "local-first", "hearth", "openai"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "python-multipart>=0.0.9",  # FastAPI file uploads (/api/extract)
    "pypdf>=4.0",               # PDF → text for document attachments
    "python-docx>=1.1",         # DOCX → text for document attachments
]

[project.optional-dependencies]
# Desktop window via the OS's native webview (no bundled browser). Without it,
# `mantel` falls back to a Chromium/Edge --app window or the default browser.
gui = ["pywebview>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mantel = "mantel.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mantel = ["webui/*.html", "assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
